[package]
name = "spike-actor-system"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
crossbeam-channel = "0.5.12"
crossbeam-queue = "0.3.11"
delegate = "0.12.0"
derivative = "2.2.0"
eframe = "0.27.2"
ensnare = { path = "../../../../src/ensnare" }
ensnare-proc-macros = { version = "0.0.4", path = "../../../../src/ensnare/crates/proc-macros" }
ensnare-services = { version = "0.0.7", features = [
    "audio",
    "midi",
], path = "../../../../src/ensnare/crates/services" }
ensnare-toys = { path = "../../../../src/ensnare-v1/toys" }
ensnare-v1 = { path = "../../../../src/ensnare-v1" }
env_logger = "0.11.3"
hound = "3.5.1"
rustc-hash = "1.1.0"
serde = { version = "1.0.198", features = ["rc", "derive"] }
typetag = "0.2.16"
